# msv

./: # TODO.md  .gitignore  README.md  config.toml  config.toml.example  file_processor.py  orders.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
msv.egg-info/: PKG-INFO  SOURCES.txt
samples/: create-excel-samples.py  customers.csv  customers.xlsx  orders.csv  orders.xlsx
src/: __init__.py  file_handlers.py  main.py  natural_language.py  version.py  web_interface.py
src/static/: script.js  style.css
src/templates/: index.html
tests/: natural_language.py  test_data_merger.py  test_file_handlers.py
