[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msv"
version = "1.0.0"
description = "A powerful CLI tool for merging and transforming CSV/XLSX files"
readme = "README.md"
authors = [{ name = "StackBlitz", email = "support@stackblitz.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["csv", "xlsx", "data", "merge", "transform", "cli"]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/stackblitz/msv"

[project.scripts]
msv = "src.main:main"